<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:background="@drawable/curved_top_white_bg"
        android:paddingEnd="24dp">

        <TextView
            android:id="@+id/titleEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/new_event"
            android:textColor="@color/color_pink"
            android:textSize="17dp" />


        <LinearLayout
            android:id="@+id/titleEventname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleEvent"
            android:layout_marginTop="@dimen/margin_top_view"
            android:background="@drawable/edit_filed_bg"
            android:gravity="center"
            android:paddingTop="2dp"
            android:paddingBottom="6dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_here"
                app:boxBackgroundColor="@color/edit_field_color"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/editEventname"
                    style="@style/editTextTheme"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleEventname"
            android:layout_marginTop="@dimen/margin_top_view"
            android:background="@drawable/edit_filed_bg"
            android:gravity="center_vertical"
            android:paddingTop="2dp"
            android:paddingBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="\@" />

            <TextView
                android:id="@+id/timeTxtEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunitosemibold"
                android:hint="Time, Date Here"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/timeImgEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_calender_yellow" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddEvent"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeEvent"
            android:layout_marginTop="@dimen/margin_top_view"
            android:layout_marginBottom="@dimen/margin_top_view"
            android:text="@string/add_event"
            android:textAllCaps="false" />
    </RelativeLayout>
</layout>